--- a/about.html
+++ b/about.html
@@ -25,7 +25,8 @@
     <button class="unbutton button-menu" aria-label="Open the menu"><span></span></button>
   </div>
 
-<div class = "about">  Information as empowerment, connections, building communities; fostering storytelling through an interactive web tool </div>
+<div class = "about">  Hello this is my about page, my name is Yabe. - Philly 4 ever
+   </div>
 
 
 </html>
